# forge

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: rust.yml
crates/forge/: Cargo.toml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs
crates/forge-command/: Cargo.toml
crates/forge-command/src/: command.rs  descriptor.rs  error.rs  handle.rs  lib.rs  registry.rs  service.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: lib.rs
crates/forge-core/: Cargo.toml
crates/forge-editor/: Cargo.toml
crates/forge-editor/src/: buffer.rs  editor_mode.rs  error.rs  lib.rs  service.rs  snapshot.rs
crates/forge-event/: Cargo.toml
crates/forge-event/src/: bus.rs  event.rs  (+4 more)
crates/forge-fs/: Cargo.toml
crates/forge-git/: Cargo.toml
crates/forge-lsp/: Cargo.toml
crates/forge-plugin/: Cargo.toml
crates/forge-plugin-host/: Cargo.toml
crates/forge-runtime/: Cargo.toml
crates/forge-runtime/src/: application.rs  context.rs  dispatcher.rs  error.rs  event.rs  handle.rs  lib.rs  lifecycle.rs  plugin.rs  runtime.rs  signal.rs  task_manager.rs
crates/forge-runtime/src/plugin/: descriptor.rs  mod.rs  plugin.rs  registrar.rs
crates/forge-runtime/src/services/: command.rs  config.rs  mod.rs  plugin.rs  registry.rs  workspace.rs
crates/forge-terminal/: Cargo.toml
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: app.rs  cursor.rs  editor_state.rs  error.rs  lib.rs  tui.rs  ui.rs  viewport.rs
crates/forge-ui/: Cargo.toml
crates/forge-workspace/: Cargo.toml
docs/: ROADMAP.md
docs/adr/: 0001-runtime-proprietaire.md  0002-event-bus.md  0003-runtime-handle.md  0004-task-manager.md  0005-runtime-lifecycle.md  0006-signal-handling.md  0007-config-loading.md  0008-workspace-optional.md  0009-static-plugins.md  0010-layered-architecture-per-crate.md  0011-extended-crate-topology.md
(+11 files in other folders)
