[package]
name = "forge-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-workspace = { path = "../forge-workspace" }
tokio = { version = "1", features = [
    "sync",
    "macros",
    "rt",
] }
tracing = "0.1.44"
thiserror = "2.0.19"

[dev-dependencies]
tempfile = "3"
