[package]
name = "forge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
forge-config = { path = "../forge-config" }
forge-workspace = { path = "../forge-workspace" }
forge-editor = { path = "../forge-editor" }
forge-event = { path = "../forge-event" }
forge-command = { path = "../forge-command" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
] }
thiserror = "2.0.19"
tracing = "0.1.44"
