[package]
name = "forge-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-editor = { path = "../forge-editor" }
forge-workspace = { path = "../forge-workspace" }

ratatui = "0.29"
crossterm = "0.29"
thiserror = "2.0.19"
tracing = "0.1.44"
tokio = { version = "1", features = [
    "sync",
    "macros",
    "rt",
] }
